--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,8 @@
       "error",
       2
     ],
+    "import/prefer-default-export": "off",
+    "padded-blocks":"off",
     "arrow-body-style": "off",
     "class-methods-use-this": "off",
     "no-underscore-dangle": "off",
