--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^4.7.13",
     "@nestjs/typeorm": "^7.1.0",
     "bcrypt": "^5.0.0",
+    "chai": "^4.3.4",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "ioredis": "^4.17.3",
@@ -63,6 +64,7 @@
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-import": "2.20.1",
     "jest": "26.0.1",
+    "mocha": "^9.0.0",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "26.1.0",
